--- a/modules/kie-cloud-operator/install
+++ b/modules/kie-cloud-operator/install
@@ -1,7 +1,7 @@
 #!/bin/sh
 
 INSTALL_PKGS="go-toolset-1.10"
-yum install -y ${INSTALL_PKGS} \
+yum install -y ${INSTALL_PKGS} --setopt=tsflags=nodocs \
     && rpm -q ${INSTALL_PKGS}
 
 scl enable go-toolset-1.10 - << \EOF
@@ -29,5 +29,7 @@ fi
 stat ${BINARY}
 
 yum -y autoremove ${INSTALL_PKGS} \
-    && yum clean all && rm -rf /var/cache/yum
+    && yum -y update-minimal --setopt=tsflags=nodocs --security --sec-severity=Important --sec-severity=Critical \
+    && yum clean all \
+    && rm -rf /var/cache/yum
 rm -rf ${HOME}/go
